overlays/prod/frontend/merge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    app: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: www.next.zfwartcc.net
      http:
        paths:
          - backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - www.next.zfwartcc.net
      secretName: www-zfwartcc-net-tls
